# hikogui

./: .clang-format  .copilot-instructions.md  .editorconfig  .gitattributes  .gitignore  .gitmodules  AlmostAllCodeAnalysisRules.ruleset  CHANGELOG.md  CMakeLists.txt  CMakeLists_implementations.cmake  CMakeLists_includes.cmake  CMakeLists_modules.cmake  CMakeLists_pch.cmake  CMakeLists_resources.cmake  CMakeLists_shaders.cmake  CMakeLists_tests.cmake  CMakeOverride.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXTERNAL_BUGS.md  INSTALL.md  LICENSE  PropertySheet.props  README.md  SPONSORS.md  TTauri.sln  TTauri.vcxproj  TTauri.vcxproj.filters  _clang-format  appveyor.yml  folders.txt  hikogui.natvis  hikogui_tests.cmake  package.json.in  preamble-cpp.txt  ttauri.natvis  vcpkg.json
Application/: CMakeLists.txt
Application/src/: Application_base.cpp  Application_macos.mm  Application_win32.cpp
Audio/: CMakeLists.txt
Audio/src/: AudioDevice.cpp  AudioDevice_win32.cpp  AudioSystem.cpp  AudioSystem_win32.cpp  globals.cpp
Config/: CMakeLists.txt  README.md
Config/TestFiles/: boolean_expressions.txt  floats.txt  include_syntax_error.txt  includer.txt  objects_simple.txt  root_access.txt
Config/src/: LiteralParser.cpp  TTauriConfig.y  globals.cpp  parser.cpp
Config/tests/: Config_tests.cpp  Parser_tests.cpp  booleans.txt  syntax_error.txt
Diagnostic/: CMakeLists.txt
Diagnostic/src/: datum.cpp  globals.cpp  logger.cpp  logger_macos.mm  logger_win32.cpp  sdatum.cpp  trace.cpp
Diagnostic/tests/: counters_tests.cpp  exceptions_tests.cpp
Draw/: CMakeLists.txt
Draw/src/: BezierCurve.cpp  Font.cpp  PNG.cpp  Path.cpp  PathString.cpp  PixelMap.cpp  TTauriIconParser.cpp  TrueTypeFont.cpp  globals.cpp
Draw/tests/: BezierCurve_tests.cpp  Path_tests.cpp  PixelMap_tests.cpp
Foundation/: CMakeLists.txt
Foundation/scripts/: UnicodeData_converter.py
Foundation/src/: BezierCurve.cpp  BinaryUnicodeData.cpp  File.cpp  FileMapping.cpp  FileMapping_posix.cpp  FileMapping_win32.cpp  FileView.cpp  FileView_posix.cpp  FileView_win32.cpp  File_posix.cpp  File_win32.cpp  Font.cpp  FontBook.cpp  JSON.cpp  Options.cpp  PNG.cpp  Path.cpp  PathString.cpp  PixelMap.cpp  ResourceView.cpp  ShapedText.cpp  StaticResourceView.cpp  TTauriIconParser.cpp  TextShaper.cpp  Theme.cpp  TrueTypeFont.cpp  URL.cpp  URL_macos.mm  URL_posix.cpp  URL_win32.cpp  UnicodeData.cpp  abort.cpp  assert.cpp  audio_counter_clock_macos.cpp  audio_counter_clock_win32.cpp  base93.cpp  cpu_id_x64.cpp  datum.cpp  debugger_macos.mm  debugger_win32.cpp  (+28 more)
Foundation/tests/: .gitattributes  BasicTokenizer_tests.cpp  BezierCurve_tests.cpp  FileView_tests.cpp  JSON_tests.cpp  Path_tests.cpp  PixelMap_tests.cpp  TT5_tests.cpp  URL_tests.cpp  UnicodeData_tests.cpp  Unicode_tests.cpp  base93_tests.cpp  bigint_tests.cpp  counters_tests.cpp  datum_tests.cpp  decimal_tests.cpp  exceptions_tests.cpp  expression_tests.cpp  glob_tests.cpp  gzip_tests.cpp  int_overflow_tests.cpp  mat_tests.cpp  math_tests.cpp  pickle_tests.cpp  polymorphic_value_tests.cpp  polynomial_tests.cpp  safe_int_tests.cpp  small_map_tests.cpp  string_tag_tests.cpp  strings_tests.cpp  template_tests.cpp  tokenizer_tests.cpp  url_parser_tests.cpp  vec_tests.cpp  wsRGBA_tests.cpp
GUI/: CMakeLists.txt
GUI/shaders/: PipelineBox.frag  PipelineBox.vert  PipelineFlat.frag  PipelineFlat.vert  PipelineImage.frag  PipelineImage.vert  PipelineMSDF.frag  PipelineMSDF.vert  PipelineSDF.frag  PipelineSDF.vert  PipelineToneMapper.frag  PipelineToneMapper.vert
GUI/src/: Device_base.cpp  Device_vulkan.cpp  GUIDevice_base.cpp  GUIDevice_vulkan.cpp  GUISystem_base.cpp  GUISystem_vulkan.cpp  GUISystem_vulkan_macos.mm  GUISystem_vulkan_win32.cpp  Image.cpp  Instance_base.cpp  Instance_vulkan.cpp  Instance_vulkan_macos.mm  Instance_vulkan_win32.cpp  KeyboardBindings.cpp  KeyboardEvent.cpp  PipelineBox.cpp  (+35 more)
Net/: CMakeLists.txt
Required/: CMakeLists.txt
TTauri/: Application.cpp  Application.hpp  ApplicationDelegate.hpp  Application_base.cpp  Application_base.hpp  Application_forward.hpp  Application_macos.hpp  Application_macos.mm  Application_win32.cpp  Application_win32.hpp  BackingPipeline.cpp  BackingPipeline.hpp  BackingPipeline.vert  BinaryKey.hpp  BinaryKey_tests.cpp  CMakeLists.txt  Color.hpp  Color_tests.cpp  Device.cpp  Device.hpp  File.cpp  File.hpp  FileMapping.cpp  FileMapping.hpp  FileView.cpp  FileView.hpp  FileView_tests.cpp  GUI.cpp  ImageView.cpp  ImageView.hpp  Instance.cpp  Instance.hpp  LeapSecondDB.cpp  Logging.cpp  Logging.hpp  Pipeline.cpp  Pipeline.hpp  Queue.cpp  Queue.hpp  QueueCapabilities.hpp  (+110 more)
TTauriDevelopmentApplication/: CMakeLists.txt  TTauriDevelopmentApplication.cpp  TTauriDevelopmentApplication.vcxproj  TTauriDevelopmentApplication.vcxproj.filters
Text/: CMakeLists.txt
ThirdPartyLibraries/: CMakeLists.txt  install.bat
Time/: CMakeLists.txt
Widgets/: CMakeLists.txt
docs/: BON8.md  BON8.rst  Base-93.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dependencies.rst  FBON_integer_ranges.py  GUI.md  INSTALL.md  TTauri.md  Text.md  Widgets.md  anti_aliasing.md  application_lifetime.md  audio_clock_and_time.md  aux_text.md  base-93.py  bidirectional_text_editing.md  binary_unicode_data.md  build_with_gcc_on_linux.md  build_with_msvc_on_windows.md  build_with_visual_studio.md  build_with_visual_studio_and_vcpkg.md  build_with_visual_studio_code.md  build_with_vscode_devcontainer.md  case_study_recording_application.md  code_quality.md  code_style.md  color.md  conf.py.in  dependencies.md  fancy_text.md  fbon.md  fbon.mm  from_test_to_display.md  geometry.md  gui_system.md  hardware_support.md  high_dpi_displays.md  (+19 more)
src/: .clang-format  CMakeLists.txt  Dependencies.rst  conf.py.in
tools/: BinaryToCPP.c  CMakeLists.txt  check_balanced_brackets.py  check_header_dependencies.py  embed_static_resource.cpp  generate_au_units.sh  generate_cmakelists.py  generate_cmakelists.sh  generate_unicode_data.py  generate_unicode_data.sh  git_update_copyright.py  git_version.py  unicode_data_generator.py
(+5641 files in other folders)
